@@ -11,6 +11,7 @@ export(create_viewer)
 export(df_to_tier)
 export(draw_sound)
 export(eaf_to_df)
+export(exb_to_df)
 export(extract_intervals)
 export(get_textgrid_names)
 export(rename_soundfiles)
