@@ -1,5 +1,6 @@
 phonfieldwork 0.0.5 (24.05.2020)
-  - add "eaf_to_df()" function
+  - add "eaf_to_df()" function for reading ELAN files
+  - add "exb_to_df()" function for reading EXMARaLDA files
 
 phonfieldwork 0.0.4 (10.05.2020)
   - add "create_subannotation()" function
